fixed centering issues and spacing

--- a/mainWindow.css
+++ b/mainWindow.css
@@ -17,6 +17,6 @@ h3 {
     clear: both;
 }
 
-.button-center {
+.center {
     text-align: center;
 }
